[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/objects/Block.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
albedo_color = Color( 0.52549, 0.52549, 0.52549, 1 )

[sub_resource type="CubeMesh" id=6]
resource_local_to_scene = true
material = SubResource( 5 )
size = Vector3( 3.9, 2, 3.9 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.95, 1, 1.95 )

[sub_resource type="SpatialMaterial" id=10]
resource_local_to_scene = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=9]
resource_local_to_scene = true
material = SubResource( 10 )
size = Vector3( 0.5, 2, 2 )

[sub_resource type="SpatialMaterial" id=8]
resource_local_to_scene = true
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=7]
resource_local_to_scene = true
material = SubResource( 8 )
size = Vector3( 0.5, 2, 2 )

[node name="Block" type="MeshInstance" groups=["block"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
mesh = SubResource( 6 )
material/0 = null
script = ExtResource( 1 )

[node name="BulbyDetector" type="Area" parent="."]
collision_layer = 2

[node name="CollisionShape" type="CollisionShape" parent="BulbyDetector"]
shape = SubResource( 4 )

[node name="RequiredColor" type="Spatial" parent="."]
visible = false

[node name="MeshInstance" type="MeshInstance" parent="RequiredColor"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0.25, 0 )
mesh = SubResource( 9 )
skeleton = NodePath("../..")
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="RequiredColor"]
transform = Transform( 0.707107, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707107, 0, 0.25, 0 )
mesh = SubResource( 7 )
skeleton = NodePath("../..")
material/0 = null

[connection signal="area_entered" from="BulbyDetector" to="." method="_on_BulbyDetector_area_entered"]
